updated name to avoid conflict with existing npm package

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "compound",
+  "name": "compound-util",
   "version": "1.0.0",
   "description": "Like compose, but with rest params being also passed in",
   "main": "src/compound.js",
