added repository to package.json, changed version number

--- a/package.json
+++ b/package.json
@@ -1,8 +1,12 @@
 {
   "name": "compound-util",
-  "version": "1.0.0",
+  "version": "0.0.2",
   "description": "Like compose, but with rest params being also passed in",
   "main": "src/compound.js",
+  "respository": {
+    "type": "git",
+    "url": "https://github.com/pdme/compound"
+  },
   "scripts": {
     "test": "jest"
   },
